test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_write_expr.draco
proc main() void : a:= write(a); corp;
