test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_write_as_identifier.draco
int write;
 
proc main() void : a := 1; corp;
